--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Your Website Name</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Include your CSS file here -->
+    <link rel="stylesheet" href="styles.css" />
+    <!-- Include your CSS file here -->
 </head>
+
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="https://aboomar524.github.io/web115/">WEB115</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -21,15 +24,14 @@
     <main>
         <section class="hero">
             <h1>Welcome</h1>
-            <p> Be your self.</p>
+            <p>Be your self.</p>
             <a href="about.html" class="btn">Learn More</a>
         </section>
-
-       
     </main>
 
     <footer>
         <p>&copy; 2023 Alhomair. All Rights Reserved.</p>
     </footer>
 </body>
+
 </html>
