--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Your Website Name</title>
-    <link rel="stylesheet" href="styles.css" />
-    <!-- Include your CSS file here -->
+     <link href="styles/default.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -30,7 +29,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Alhomair. All Rights Reserved.</p>
+        <p>&copy; 2024 Alhomair. All Rights Reserved.</p>
     </footer>
 </body>
 
