--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Name</title>
+    <title>Ahmad Alhomair</title>
     <link href="styles/default.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -12,20 +12,18 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="https://aboomar524.github.io/web115/">WEB115</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html" target="_blank">Home</a></li>
+                <li><a href="https://www.linkedin.com/in/ahmad-al-homair/" target="_blank">LinkedIn</a></li>
+                <li><a href="https://aboomar524.github.io/web115/" target="_blank">WEB115</a></li>
+                <li><a href="https://aboomar524.github.io/" target="_blank">Github.io</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="hero">
-            <h1>Welcome</h1>
-            <p>Be yourself.</p>
-            <a href="about.html" class="btn">Learn More</a>
-        </section>
+        <h1>Welcome</h1>
+        <p>Be yourself.</p>
+        <a href="about.html" class="btn" target="_blank">Learn More</a>
     </main>
 
     <footer>
