--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
     </header>
 
     <main>
-        <h1>Welcome</h1>
-        <p>Be yourself.</p>
-        <a href="about.html" class="btn" target="_blank">Learn More</a>
+        <h1>Ahmad Alhomair</h1>
+        <p>
+            Have taqwa (fear) of Allah wherever you may be,
+            and follow up a bad deed with a good deed which will wipe it out,
+            and behave well towards the people
+        </p>
     </main>
 
     <footer>
