--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ahmad Alhomair</title>
     <link href="styles/default.css" rel="stylesheet" type="text/css">
+    <script src="dailyText.js" defer></script>
 </head>
 
 <body>
@@ -21,12 +22,8 @@
     </header>
 
     <main>
-        <h1>Ahmad Alhomair</h1>
-        <p>
-            Have taqwa (fear) of Allah wherever you may be,
-            and follow up a bad deed with a good deed which will wipe it out,
-            and behave well towards the people
-        </p>
+        <h1>The Messenger of Allah said</h1>
+        <p id="daily-text">Loading...</p>
     </main>
 
     <footer>
