--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ahmad Alhomair</title>
     <link href="styles/default.css" rel="stylesheet" type="text/css">
-    <script src="dailyText.js" defer></script>
+    <script src="scripts/dailyText.js" defer></script>
+
 </head>
 
 <body>
