--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>The Messenger of Allah said</h1>
         <p id="daily-text">Loading...</p>
     </main>
-
+    <script src="scripts/HTMLInclude.js"></script>
     <footer>
         <p>&copy; 2024 Alhomair. All Rights Reserved.</p>
     </footer>
