--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ahmad Alhomair</title>
+    <title>Student Website</title>
     <link href="styles/default.css" rel="stylesheet" type="text/css">
     <script src="scripts/dailyText.js" defer></script>
 
