--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html" target="_blank">Home</a></li>
                 <li><a href="https://www.linkedin.com/in/ahmad-al-homair/" target="_blank">LinkedIn</a></li>
                 <li><a href="https://aboomar524.github.io/web115/" target="_blank">WEB115</a></li>
-                <li><a href="https://aboomar524.github.io/web215/" target="_blank">web215</a></li>
+                <li><a href="https://aboomar524.github.io/web215/" target="_blank">WEB215</a></li>
                 <li><a href="https://aboomar524.github.io/web250/" target="_blank">WEB250</a></li>
                 <li><a href="https://aboomar524.github.io/" target="_blank">GitHub.io</a></li>
             </ul>
