--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Student Website</title>
     <link href="styles/default.css" rel="stylesheet" type="text/css">
     <script src="scripts/dailyText.js" defer></script>
+    <script src="https://lint.page/kit/880bd5.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -14,7 +15,6 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html" target="_blank">Home</a></li>
                 <li><a href="https://www.linkedin.com/in/ahmad-al-homair/" target="_blank">LinkedIn</a></li>
                 <li><a href="https://aboomar524.github.io/web115/" target="_blank">WEB115</a></li>
                 <li><a href="https://aboomar524.github.io/web215/" target="_blank">WEB215</a></li>
